--- a/beispiele/css_table.html
+++ b/beispiele/css_table.html
@@ -13,7 +13,7 @@
             font-family: Arial, serif;
         }
         table{
-            border: 2px solid orange;
+            border: 2px solid red;
             margin: 0 auto 0 auto;
         }
         [href = "#etabelle"]{
