--- a/beispiele/css_table.html
+++ b/beispiele/css_table.html
@@ -24,7 +24,7 @@
         th{
             background-color: moccasin;
         }
-        tr:nth-child(2){
+        tr:nth-child(2){ /*Pseudoklasse nth-child*/
            background-color: moccasin;
         }
         li{
@@ -35,8 +35,9 @@
         }
         abbr{
             text-decoration: none;
+            font-weight: bold ;
         }
-        ul li{
+        ul > li{
             display: inline;
             border-right: 2px solid orange;
             padding: 0 10px 0 10px;
