--- a/beispiele/m1_4b_tabelle.html
+++ b/beispiele/m1_4b_tabelle.html
@@ -18,7 +18,7 @@
 <body>
 <table>
     <tr>
-        <th>Art</th>
+        <th>Art</th> <!-- Text wegen th (table header) bold -->
         <th>Gericht</th>
         <th>Preis</th>
         <th>Werktag</th>
@@ -33,9 +33,7 @@
         <td></td>
     </tr>
     <tr>
-        <td rowspan="2">
-            Pasta
-        </td>
+        <td rowspan="2">Pasta</td>
         <td>Spaghetti Carciofo</td>
         <td>3.50&euro;</td>
         <td>A,A1</td>
