--- a/beispiele/m1_8a_text.html
+++ b/beispiele/m1_8a_text.html
@@ -14,7 +14,7 @@
           border-bottom: 1px solid black;
           width:500px;
       }
-    .untertitel{
+    .untertitel{ /* Selektor für Klasse */
         margin-top: -22px;
         font-family: Arial,serif;
         font-style: italic;
