--- a/werbeseite/index.html
+++ b/werbeseite/index.html
@@ -25,7 +25,7 @@
             border-color: indigo;
             border-spacing: 5px;
             display: grid;
-            grid-template-columns: 15% 70% 15% ;
+            grid-template-columns: 15% 70% 15%;
             margin-left: 15%;
         }
         .Header1{
@@ -33,9 +33,12 @@
             margin-right: 2px;
             margin-left: 3px;
             text-align: center;
+            font-size: 20px;
         }
         .Header2 > a{
-           margin-right: 25px;
+           margin-right: 30px;
+            font-size: 22px;
+            text-decoration: none;
         }
         .Header2{
             border: 1px solid indigo;
