aria placeholder weg

--- a/werbeseite/index.html
+++ b/werbeseite/index.html
@@ -164,9 +164,9 @@
         <h2 id="zahlen">E-Mensa in Zahlen</h2>
         <table class="TheNumbersMasonWhatDoTheyMean">
             <tr>
-                <th aria-placeholder="X Besuche">x</th> <th> Besuche</th>
-                <th aria-placeholder="Y Anmeldungen">y</th> <th> Anmeldungen</th>
-                <th aria-placeholder="Z Speisen">z</th> <th> Speisen</th>
+                <th>x</th> <th> Besuche</th>
+                <th>y</th> <th> Anmeldungen</th>
+                <th>z</th> <th> Speisen</th>
             </tr>
         </table>
         <br><br>
